RESOLVED FIXED235935
RemoteRenderingBackendProxy should not be a IPC::MessageSender
https://bugs.webkit.org/show_bug.cgi?id=235935
Summary RemoteRenderingBackendProxy should not be a IPC::MessageSender
Simon Fraser (smfr)
Reported 2022-01-31 19:36:13 PST
RemoteRenderingBackendProxy should not be a IPC::MessageSender
Attachments
Patch (7.06 KB, patch)
2022-01-31 19:47 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-01-31 19:47:11 PST
EWS
Comment 2 2022-02-01 08:12:43 PST
Committed r288877 (246629@main): <https://commits.webkit.org/246629@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450490 [details].
Radar WebKit Bug Importer
Comment 3 2022-02-01 08:13:19 PST
Note You need to log in before you can comment on or make changes to this bug.