Cherry-pick 7bf7d10638b9632f5cfea6642bb23228af52c86c. rdar://94379086

RemoteRenderingBackendProxy should not be a IPC::MessageSender
    https://bugs.webkit.org/show_bug.cgi?id=235935

    Reviewed by Wenson Hsieh.

    Calling send() in RemoteRenderingBackendProxy fails to send a message to the GPU process,
    because it has no connection(), only a StreamClientConnection or the GPUProcessConnection.

    So make it not inherit from IPC::MessageSender. Code using send() now explicitly uses
    ensureGPUProcessConnection().connection().

    (WebKit::RemoteLayerBackingStore::setBufferVolatility):
    * WebProcess/GPU/graphics/RemoteRenderingBackendProxy.cpp:
    (WebKit::RemoteRenderingBackendProxy::~RemoteRenderingBackendProxy):
    (WebKit::RemoteRenderingBackendProxy::gpuProcessConnection):
    (WebKit::RemoteRenderingBackendProxy::waitForDidCreateImageBufferBackend):
    (WebKit::RemoteRenderingBackendProxy::waitForDidFlush):
    (WebKit::RemoteRenderingBackendProxy::streamConnection):
    (WebKit::RemoteRenderingBackendProxy::messageSenderConnection const): Deleted.
    (WebKit::RemoteRenderingBackendProxy::messageSenderDestinationID const): Deleted.
    * WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h:

    Canonical link: https://commits.webkit.org/246629@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288877 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.672@safari-613-branch