Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackendProxy.h
@@ -63,8 +63,7 @@ namespace WebKit {
 class WebPage;
 
 class RemoteRenderingBackendProxy
-    : public IPC::MessageSender
-    , private IPC::MessageReceiver
+    : private IPC::MessageReceiver
     , public GPUProcessConnection::Client {
 public:
     static std::unique_ptr<RemoteRenderingBackendProxy> create(WebPage&);
@@ -78,10 +77,6 @@ public:
 
     void createRemoteImageBuffer(WebCore::ImageBuffer&);
     bool isCached(const WebCore::ImageBuffer&) const;
-        
-    // IPC::MessageSender.
-    IPC::Connection* messageSenderConnection() const override;
-    uint64_t messageSenderDestinationID() const override;
 
     // IPC::MessageReceiver
     void didReceiveMessage(IPC::Connection&, IPC::Decoder&) override;
@@ -146,6 +141,7 @@ private:
     void gpuProcessConnectionDidClose(GPUProcessConnection&) final;
 
     GPUProcessConnection& ensureGPUProcessConnection();
+    IPC::Connection& gpuProcessConnection();
 
     // Returns std::nullopt if no update is needed or allocation failed.
     // Returns handle if that should be sent to the receiver process.
